<resources>
    <string name="app_name">Cookbook</string>
    <string name="recipe_main_image_desc">Recipe main image</string>
    <string name="title_ingredients">Ингредиенты</string>
    <string name="title_steps">Шаги</string>

    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="prompt_username">username</string>
    <string name="username_hint">John Doe</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_hint">3–20 symbols</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="don_t_have_an_account_register_now">Don`t have an account? <b>Register Now</b></string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>

    <!--Strings related to error handling -->
    <string name="text_retry">Retry</string>
    <string name="error_message">Something went wrong.</string>
</resources>